# company-policy-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py
app/api/: main.py  schemas.py
app/api/routes/: health.py  ingest.py  query.py
app/embeddings/: embedder.py
app/evaluation/: evaluate.py
app/generation/: llm.py  rag_chain.py
app/ingestion/: chunker.py  loader.py
app/retrieval/: hybrid.py  reranker.py
app/vectorstore/: store.py
data/: eval_dataset.json
data/sample/: company_handbook.txt  rag_explained.txt  test.txt
docs/: DECISIONS.md
scripts/: deploy_hf.py  run_evaluation.py
tests/: test_chunker.py
ui/: streamlit_app.py
